@startuml

' Define entities for the online course marketplace

entity AspnetUser {
  * userId : bigint(20) <<PK>>
  --
  username : varchar(50)
  email : varchar(360)
  password : varchar(100)
  role : enum('student', 'instructor', 'admin')
  createdAt : datetime
}

entity Courses {
  * courseId : bigint(20) <<PK>>
  --
  instructorId : bigint(20) <<FK>>
  title : varchar(100)
  description : text
  price : decimal(10,2)
  createdAt : datetime
  updatedAt : datetime
}

entity Enrollments {
  * enrollmentId : bigint(20) <<PK>>
  --
  courseId : bigint(20) <<FK>>
  studentId : bigint(20) <<FK>>
  amount : decimal(10,2)  
  enrollmentDate : datetime
  status : enum('Active', 'Completed')
}

entity Lessons {
  * lessonId : bigint(20) <<PK>>
  --
  courseId : bigint(20) <<FK>>
  title : varchar(100)
  videoUrl : varchar(255)
  content : text
  duration : int
  createdAt : datetime
  updatedAt : datetime
}

' Define relationships between entities
AspnetUser ||--o{ Courses : creates
AspnetUser ||--o{ Enrollments : enrolls
Courses ||--o{ Enrollments : has
Courses ||--o{ Lessons : contains

@enduml
